--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -6,7 +6,11 @@
     <div>
         {% for room in rooms %}
         <div>
+            <span>@{{room.host.username}}</span>
             <h5>{{room.id}} - <a href="{% url 'room' room.id%}">{{room.name}}</a></h5>
+            <small>{{room.topic}}</small>   
+            <!-- this will automatically shows the name of the topic due to __str__ -->
+            <hr>
         </div>
         {% endfor %}
     </div>
