--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -3,9 +3,13 @@
 {% block content %}
 <h1>Home page</h1>
 <div>
+    <a href="{% url 'create-room' %}">Create Form</a>
+    <hr>
     <div>
         {% for room in rooms %}
         <div>
+            <a href="{% url 'update-room' room.id %}">Edit</a>
+            <a href="{% url 'delete-room' room.id %}">Delete</a>
             <span>@{{room.host.username}}</span>
             <h5>{{room.id}} - <a href="{% url 'room' room.id%}">{{room.name}}</a></h5>
             <small>{{room.topic}}</small>   
