--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -26,6 +26,7 @@
         {% endfor %}
     </div>
     <div>
+        <h5>{{room_count}} rooms available</h5>
         <a href="{% url 'create-room' %}">Create Form</a>
         <hr>
         <div>
