--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -27,13 +27,15 @@
     </div>
     <div>
         <h5>{{room_count}} rooms available</h5>
-        <a href="{% url 'create-room' %}">Create Form</a>
+        <a href="{% url 'create-room' %}">Create Room</a>
         <hr>
         <div>
             {% for room in rooms %}
             <div>
+                {% if request.user == room.host %}
                 <a href="{% url 'update-room' room.id %}">Edit</a>
                 <a href="{% url 'delete-room' room.id %}">Delete</a>
+                {% endif %}
                 <span>@{{room.host.username}}</span>
                 <h5>{{room.id}} - <a href="{% url 'room' room.id%}">{{room.name}}</a></h5>
                 <small>{{room.topic}}</small>
