--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -1,7 +1,7 @@
 {% extends "main.html" %}
 
 {% block content %}
-
+{% if page == 'login' %}
 <div>
     <form action="" method="POST">
         {% csrf_token %}
@@ -11,5 +11,20 @@
         <input type="password" name="password" placeholder="Enter Password">
         <input type="submit" value="Login">
     </form>
+
+    <p>Have'nt signed up yet?</p>
+    <a href="{% url 'register' %}">Sign Up</a>
 </div>
+{% else %}
+
+<div>
+    <form action="" method="POST">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" value="Register">
+    </form>
+    <p>Already signed up?</p>
+        <a href="{% url 'login' %}">Login</a>
+    </div>
+{% endif %}
 {% endblock content %}
